[Chore] Project CSS 스타일 변경 및 Global/Reset/Variable 용도별 CSS 분리

--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,13 @@
     <meta content="Web site created using create-react-app" name="description" />
     <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
     <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
-    <link href="./reset.css" rel="stylesheet" />
 
-    <!-- public/index.html 파일의 <head> 태그 안에 추가 -->
+    <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>A2D</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
