[Fix] 변경된 UI 디자인 위에 로그인 API 추가

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="#000000" name="theme-color" />
-    <meta content="Web site created using create-react-app" name="description" />
-    <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
-    <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
+<html lang="ko">
+<head>
+  <meta charset="utf-8" />
+  <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta content="#000000" name="theme-color" />
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- PWA 관련 메타태그 -->
+  <meta name="description" content="아날로그 데이터의 디지털화" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <title>A2D</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+  <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
+  <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+  <!-- 추가 favicon -->
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+
+  <title>A2D</title>
+</head>
+<body>
+<div id="root"></div>
+</body>
 </html>
