Revert "[Chore] Test를 위한 커밋 ( Vercel 환경 배포를 위함 )"
This reverts commit d02945cc571e40c002cca949d672f8424013a258.

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <link href="%PUBLIC_URL%/favicon.ico" rel="icon" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes, viewport-fit=cover" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta content="#000000" name="theme-color" />
 
   <!-- PWA 관련 메타태그 -->
   <meta name="description" content="아날로그 데이터의 디지털화" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
   <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
   <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
