[Fix] cdnjs 링크 script 삽입

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
   <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
 
   <title>A2D</title>
+
+  <script src="//cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  
 </head>
 <body>
 <div id="root"></div>
