--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
   <meta name="description" content="아날로그 데이터의 디지털화" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="mobile-web-app-capable" content="yes">
 
   <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
   <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
