--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,9 @@
   <link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
   <link href="%PUBLIC_URL%/manifest.json" rel="manifest" />
 
+  <meta http-equiv="content-type" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="refresh" content="no-cache" />
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
